Update delete task function

--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,3 @@
-.badge {
-  display: inline-block;
-  padding: 0.25em 0.4em;
-  font-size: 75%;
-  font-weight: 700;
-  line-height: 1;
-  text-align: center;
-  white-space: nowrap;
-  vertical-align: baseline;
-  border-radius: 0.15rem;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
-    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+.modal.fade:not(.show) {
+  transition-duration: 1s; /* Adjust the duration as needed */
 }
